updated readme + structure

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,10 @@ build
 .vscode
 using_parameter_parser
 CMakePresets.json
-
+__CMakeLists.txt
+__config.cmake.in
+reader
+old_components
 # CLion
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
