--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,6 @@ cmake_minimum_required(VERSION 4.0)
 project(parameter_parser VERSION 1.0.0 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 23)
 
-add_subdirectory(utilities)
-add_subdirectory(reader)
 
 if(ADD_EXAMPLE)
     message(STATUS "building test example")
@@ -17,13 +15,40 @@ if(ENABLE_TESTING)
     include(CTest)
 endif()
 
+add_library(parameter_parser INTERFACE)
+add_library(parameter_parser::parameter_parser ALIAS parameter_parser)
+
+target_include_directories(parameter_parser
+                           INTERFACE
+                           $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+                           $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
+)
+
+install(TARGETS parameter_parser
+        EXPORT parameter_parser-targets
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+        INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+)
+
 include(GNUInstallDirs)
+
+install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include
+        DESTINATION ${CMAKE_INSTALL_PREFIX})
+
+
+install(EXPORT parameter_parser-targets
+        FILE "parameter_parser-targets.cmake"
+        NAMESPACE parameter_parser::
+        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/parameter_parser
+)
 
 include(CMakePackageConfigHelpers)
 
 configure_package_config_file(${CMAKE_CURRENT_SOURCE_DIR}/config.cmake.in
                                 "${CMAKE_BINARY_DIR}/${PROJECT_NAME}-config.cmake"
-                                INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})
+                                INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/parameter_parser)
 
 write_basic_package_version_file("${CMAKE_BINARY_DIR}/${PROJECT_NAME}-config-version.cmake"
                                 VERSION ${PROJECT_VERSION}
@@ -31,4 +56,4 @@ write_basic_package_version_file("${CMAKE_BINARY_DIR}/${PROJECT_NAME}-config-ver
 
 install(FILES
         "${CMAKE_BINARY_DIR}/${PROJECT_NAME}-config.cmake"
-        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})
+        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/parameter_parser)
