--- a/config.cmake.in
+++ b/config.cmake.in
@@ -1,3 +1,2 @@
-foreach(component ${parameter_parser_FIND_COMPONENTS})
-    include(${CMAKE_CURRENT_LIST_DIR}/parameter_parser-${component}-config.cmake)
-endforeach()
+@PACKAGE_INIT@
+include("${CMAKE_CURRENT_LIST_DIR}/parameter_parser-targets.cmake")
